scss/partials/_activity_card.scss
div.activity-card {
  width: 432px;
  float: left;
  background-color: white;
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.05);
  border-radius: 4px;
  margin: 12px;
  position: relative;

  &:hover {
    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.15);
  }

  &.activity-card-placeholder {
    background-color: transparent;
    box-shadow: none;
    border: none;
  }

  &.empty-state {
    border: none;
    box-shadow: none;
    background-color: transparent;
    margin-top: 20px;
    flex: 1;
    text-align: center;
    width: 100%;

    div.empty-state-content {
      height: 160px;
      position: relative;
      top: 50%;
      margin-top: -80px;

      img {
        width: 168px;
        height: 120px;
      }

      div.activity-card-title {
        font-size: 14px;
        color: $carrot_light_gray;
        @include avenir_H();
        margin-top: 20px;
        text-align: center;

        button {
          color: $carrot_text_blue;
          padding: 0;
          margin: 0;

          &:hover, &:avtive, &:focus {
            border: none;
            outline: none;
            text-decoration: underline;
          }
        }
      }
    }
  }

  &.all-posts-card {
    div.activity-card-content{

      div.activity-card-body {

        &.has-media-preview {
          width: 100%;
          margin-right: 0px;
          float: initial;
        }
      }

      div.read-more {
        width: 100%;
        text-align: center;
        margin-top: 24px;
        color: $carrot_text_blue;
        @include avenir_H();
        font-size: 16px;
      }

      div.activity-card-media-preview {
        width: 100%;
        float: initial;
        margin-top: 16px;
        max-height: 200px;
        height: 200px;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
      }
    }
  }

  div.activity-card-breadcrumb {
    @include avenir_R();
    font-size: 14px;
    color: $oc_gray_7;
    padding: 24px;
    background-color: $carrot_light_gray_2;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;

    div.topic {
      float: right;
      @include activity-tag();
    }
  }

  &:hover {
    div.activity-card-head.entry-card {
      background-color: $carrot_light_gray_5;
    }
  }

  div.activity-card-head {
    width: 100%;
    padding: 16px 24px;
    height: 72px;

    &.entry-card {
      background-color: $carrot_light_gray_2;
      border-top-left-radius: 4px;
      border-top-right-radius: 4px;
    }

    div.activity-card-head-author {
      float: left;
      width: 58%;
      padding-right: 20px;
      overflow: hidden;

      @include activity-author(40);
    }

    div.activity-card-head-right {
      float: right;
      position: relative;
      width: 42%;
      margin-top: 8px;

      div.activity-tag {
        margin-top: 0;
        float: right;
        max-width: 100%;
        text-overflow: ellipsis;
        overflow: hidden;

        &.double-tag {
          max-width: 50%;
        }
      }

      @include activity-tag();
    }
  }

  &:hover {
    div.activity-card-head div.activity-card-head-right {
      div.activity-tag {
        background-color: $carrot_light_gray_6;
      }
    }
  }

  div.activity-card-content {
    width: 100%;
    padding: 32px 32px 0px;

    div.activity-card-title {
      @include activity-title();
      margin-bottom: 24px;
    }

    div.activity-card-headline {
      @include activity-headline();
      text-overflow: ellipsis;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      max-height: 28px;

      &.has-headline {
        margin-bottom: 24px;
        height: 28px;
      }
    }

    div.activity-card-media-preview {
      width: 72px;
      height: 72px;
      float: right;
      text-align: center;
      white-space: nowrap;
      margin-top: 16px;
      overflow: hidden;
      background-position: 50%;
      background-size: cover;
      border-radius: 4px;
      position: relative;

      &:hover {
        cursor: pointer;
      }

      &:after {
        position: absolute;
        font-family: FontAwesome;
        font-size: 20px;
        color: white;
        opacity: 0.5;
        top: 50%;
        left: 50%;
      }

      &:hover {
        &:after {
          opacity: 0.8;
        }
      }

      &.video {
        &:after {
          content: "\f04b";
          margin-left: -8px;
          margin-top: -14px;
        }
      }
    }

    div.activity-card-body {
      @include activity-body();
      display: block;
      line-height: 24px;
      max-height: #{24*3}px;

      &.has-body {
        height: #{24*3}px;
      }

      &.has-media-preview {
        width: calc(100% - 72px - 16px);
        margin-right: 16px;
        float: left;
      }

      .carrot-no-preview {
        display: none;
      }

      p {
        margin-top: 0px;
        margin-bottom: 0px;
      }

      a:not(.read-more):hover {
        text-decoration: none !important;
      }

      img:not(.emojione){
        display: none;
      }

      a.read-more {
        @include avenir_R();
        font-size: 16px;
        color: $carrot_text_blue;
        cursor: pointer;
        display: inline-block !important;

        &:hover {
          text-decoration: underline;
        }
      }

      // // Uncomment this to programmatically add the read full update at the end of the last body tag
      // div:last-child, p:last-child {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //     margin-left: 5px;
      //   }
      // }

      // &:empty {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //   } 
      // }
    }
  }

  div.activity-card-footer {
    width: 100%;
    height: 72px;
    padding: 24px 24px 24px 32px;

    div.more-button {
      float: right;
      position: relative;
      margin-right: -6px;

      button.more-ellipsis {
        width: 24px;
        height: 24px;
        padding: 8px;
        display: block;
        background-image: cdnUrl("/img/ML/vertical_ellipsis.svg");
        background-position: center;
        background-size: 6px 16px;
        background-repeat: no-repeat;
      }

      div.activity-move {
        position: absolute;
        top: -104px;
        left: -301px;
      }

      div.dropdown-menu {
        position: absolute;
        top: unset;
        bottom: -20px;
        left: -132px;
        width: 130px;
        min-width: 130px;
        height: auto;
        border: none;
        outline: none;
        box-shadow: none;
        background-color: transparent;
        overflow: visible;

        div.triangle {
          position: absolute;
          bottom: 25px;
          right: -7px;
          background-color: white;
          border-top: 1px solid rgba(177,184,192,0.50);
          border-left: 1px solid rgba(177,184,192,0.50);
          transform: rotate(135deg);
          width: 15px;
          height: 15px;
        }

        ul.activity-card-more-menu {
          background-color: white;
          border: 1px solid rgba(177,184,192,0.50);
          box-shadow: 0 4px 10px 1px rgba(0,0,0,0.10);
          border-radius: 5px;
          margin: 8px 0;
          padding: 10px 13px 6px 8px;
          min-height: 50px;
          list-style-type: none;
          width: 100%;

          li {
            padding: 3px 8px;
            @include avenir_M();
            font-size: 14px;
            color: $carrot_light_gray_3;
            cursor: pointer;
            background-color: transparent;

            &:hover {
              background-color: rgba($carrot_light_gray_4, 0.2);
            }
          }
        }
      }
    }
  }
}
/* linkAnimation for card and modal links */
@include keyframe(linkAnimation){
  0% {
    background-position: right bottom;
    background-size: 100% .1rem;
  }

  50% {
    background-position: right bottom;
    background-size: 0 .1rem;
  }

  51% {
    background-position: left bottom;
    background-size: 0 .1rem;
  }

  100% {
    background-position: left bottom;
    background-size: 100% .1rem;
  }
}

